<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="online.justvpn.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="online.justvpn.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_sign"
        android:name="online.justvpn.ui.sign.SignFragment"
        android:label="@string/title_sign_fragment"
        tools:layout="@layout/fragment_sign" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="online.justvpn.ui.profile.ProfileFragment"
        android:label="@string/title_profile_fragment"
        tools:layout="@layout/fragment_profile" />
</navigation>