<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sign.SignFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/profile_prompt_view"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/profile_signup_signin_prompt"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/profile_email_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@+id/text_profile"/>

        <Button
            android:id="@+id/signin_profile"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/profile_button_signin"
            android:textColor="@color/white"
            android:backgroundTint="@color/signin_button_color"
            app:layout_constraintTop_toTopOf="@+id/email_profile"/>

        <Button
            android:id="@+id/signup_profile"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/profile_button_signup"
            android:textColor="@color/white"
            android:backgroundTint="@color/app_icon_background"
            app:layout_constraintTop_toTopOf="@+id/signup_profile"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
